force-app/main/default/objects/Account/Account.object-meta.xml
<CustomObject>
    <!--compactLayoutAssignment>Account_Compact_Layout</compactLayoutAssignment-->
    <!--recordTypeTrackHistory>true</recordTypeTrackHistory-->

    <sharingModel>Read</sharingModel>

</CustomObject>