force-app/main/default/objects/Account/fields/Address_changed_by_non_integration_user__c.field-meta.xml
<CustomField>
    <fullName>Address_changed_by_non_integration_user__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Address changed by non-integration user</label>
    <type>Checkbox</type>
</CustomField>