force-app/main/default/objects/Account/fields/Driving_Directions__c.field-meta.xml
<CustomField>
    <fullName>Driving_Directions__c</fullName>
    <label>Driving Directions</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>