force-app/main/default/objects/Account/fields/OneKey_Code__c.field-meta.xml
<CustomField>

    <fullName>OneKey_Code__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>OneKey Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>