force-app/main/default/objects/Account/fields/Org_Key__c.field-meta.xml
<CustomField>

    <fullName>Org_Key__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <externalId>true</externalId>
    <label>Org Key</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>