force-app/main/default/objects/Account/fields/Parking_Instructions__c.field-meta.xml
<CustomField>
    <fullName>Parking_Instructions__c</fullName>
    <label>Parking Instructions</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>