force-app/main/default/objects/Account/recordTypes/Business_Account.recordType-meta.xml
<RecordType>
    <fullName>Business_Account</fullName>
    <active>true</active>
    <description>Represent a business or organization with contacts</description>
    <label>Business Account</label>
    <!--picklistValues>
        <picklist>AccountSource</picklist>
        <values>
            <fullName>Customer Event</fullName>
        </values>
        <values>
            <fullName>Employee Referral</fullName>
        </values>
        <values>
            <fullName>Google AdWords</fullName>
        </values>
        <values>
            <fullName>Other</fullName>
        </values>
        <values>
            <fullName>Partner</fullName>
        </values>
        <values>
            <fullName>Purchased List</fullName>
        </values>
        <values>
            <fullName>Trade Show</fullName>
        </values>
        <values>
            <fullName>Webinar</fullName>
        </values>
        <values>
            <fullName>Website</fullName>
        </values>
    </picklistValues-->

    <!--picklistValues>
        <picklist>Type</picklist>
        <values>
            <fullName>Analyst</fullName>
        </values>
        <values>
            <fullName>Competitor</fullName>
        </values>
        <values>
            <fullName>Customer</fullName>
        </values>
        <values>
            <fullName>Integrator</fullName>
        </values>
        <values>
            <fullName>Investor</fullName>
        </values>
        <values>
            <fullName>Other</fullName>
        </values>
        <values>
            <fullName>Partner</fullName>
        </values>
        <values>
            <fullName>Press</fullName>
        </values>
        <values>
            <fullName>Prospect</fullName>
        </values>
        <values>
            <fullName>Reseller</fullName>
        </values>
    </picklistValues-->
</RecordType>